bit array sorting

--- a/BitSort/makefile
+++ b/BitSort/makefile
@@ -1,10 +1,13 @@
 CXXFLAGS=  -Wall -std=c++11
+CFLAGS= -Wall
 
-SOURCES=main.cpp bit_array.cpp
+SOURCES=main.cpp bit_array.cpp num_gen.c
 TARGET=run
 
-$(TARGET): $(SOURCES:.cpp=.o)
-	$(CXX) $(CXXFLAGS)   $^ -o $@
+$(TARGET):
+	$(CC) -c num_gen.c
+		$(CXX) -c main.cpp bit_array.cpp
+			$(CXX) $(CXXFLAGS) main.o bit_array.o num_gen.o -o run
 
 clean:
-	rm -f *.o run
+	rm -f *.o run *txt
